--- a/style.css
+++ b/style.css
@@ -9,12 +9,157 @@ body{
 }
 
 .container{
-    max-width: 95vw;
+    max-width: 70vw;
     padding: 2rem 1rem;
     margin: 0 auto;
-    background-color: rgb(209, 130, 28);
+    background-color: rgb(252, 245, 237);
 }
 
 a{
     text-decoration: none;
+}
+
+.header_container{
+    margin-bottom: 2.8rem;
+    text-decoration: none;
+}
+
+.header_title{
+    margin-bottom: 1rem;
+    font-size: 1.7rem;
+    line-height: 2rem;
+    font-weight: 700;
+    text-align:center;
+
+
+}
+
+.header_desc{
+    max-width: 568px;
+    text-align: center;
+    color: rgb(61, 61, 51);
+    margin-right: 0 auto;
+    text-align: center;
+      
+}
+
+.main_container{
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: repeat(4,1fr);  
+}
+
+@media(min-width:650px){
+    .main_container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(min-width:1080px){
+    .main_container{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+@media(min-width:1340px){
+    .main_container{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+.card_conatiner{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid rgb(78, 72, 72);
+    border-radius: 8px;
+
+}
+
+.card_img_container{
+    position: relative;
+    overflow: hidden;
+    height: 14 rem;
+}
+
+.card_image{
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.card_title_container{
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+
+}
+
+.card_conatiner:hover .card_image{
+    transform: scale(1.1);
+    transition-duration: 200m;
+}
+
+.card_title{
+    font-size:1 rem;
+    font-weight:600 ; 
+    color: black;
+    line-height: 1.5rem;
+    margin-bottom: 0.6rem;
+}
+
+.card_title_anchor:hover .card_title{
+    color: rgb(86, 86, 204);
+}
+
+.card_des{
+    color: rgb(93, 84, 84);
+    font-size: 1rem;
+
+}
+.card_footer_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.5rem;
+    align-items: flex-end;
+}
+
+.auther_container{
+    direction: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+}
+
+.auther_avtar_conatiner{
+     height: 2.5rem;
+     width: 2.5rem;
+     overflow: hidden;
+     border: 1px solid rgb(174, 174, 213);
+     border-radius: 60%;
+     background-color: rgb(168, 158, 158);
+} 
+
+.author_info_conatiner{
+    direction: flex;
+    flex-direction: column;
+
+}
+.aname{
+     color: rgb(62, 62, 155);
+
+}
+.adate{
+    color: rgb(63, 55, 55);
+}
+
+.card_tag_container{
+    font-size: 0.9rem;
+    border: 1px solid black;
+    border-radius: 2px;
+    line-height: 1.3rem;
+    padding: 0.25rem 0.5rem;
+   column-rule-color: grey;
+
 }
